<resources>
    <string name="app_name">和彩商家中心</string>
    <string name="id_s">id：</string>
    <string name="nickname_s">昵称：</string>
    <string name="address_s">所在的：</string>
    <string name="editor_info_s">编辑资料</string>
    <string name="finish_s">完成</string>
    <string name="version_info">版本信息：</string>
    <string name="service_phone">客服电话：</string>
    <string name="user_protocol">和彩用户服务协议</string>
    <string name="exit_s">退出登录</string>
    <string name="change_user_s">更换用户</string>
    <string name="cut_personal_s">切换到个人版</string>
    <string name="cut_merchant_s">切换到商家版</string>
    <string name="currently_kidney_s">现有菜豆：{0}个</string>
    <string name="win_kidney_s">中奖菜豆：{0}个</string>
    <string name="top_award_s">最高奖金：{0}元</string>
    <string name="win_count_s">中奖次数：{0}次</string>
    <string name="commission_kidney_s">佣金菜豆：{0}个</string>
    <string name="recharge_s">充值</string>
    <string name="withdraw_s">提现</string>
    <string name="option_s">操作</string>
    <string name="money_s">金额</string>
    <string name="date_s">日期</string>
    <string name="time_s">时间：</string>
    <string name="mobile_s">手机号：</string>
    <string name="lottery_s">彩种：</string>
    <string name="query_s">查询</string>
    <string name="statement_s">生成对账单</string>
    <string name="bath_pay_s">批量代付</string>
    <string name="all_select_s">全选</string>
    <string name="bet_orders_s">投注单数：{0}单</string>
    <string name="note_s">注数：{0}注</string>
    <string name="bet_money_s">投注金额：{0}元</string>
    <string name="order_time_s">下单时间</string>
    <string name="mobile_num_s">手机号</string>
    <string name="lottery_type_s">彩种</string>
    <string name="issue_s">期号</string>
    <string name="num_s">数量</string>
    <string name="bet_kidney_s">投注菜豆</string>
    <string name="bet_status_s">投注状态</string>
    <string name="win_reminder_s">温馨提示：如中奖，万元以上奖金专人通知，万元以下奖金汇入菜豆钱包</string>
    <string name="bet_detail_s">投注详情</string>
    <string name="bet_issue_s">期号：{0}</string>
    <string name="bet_lottery_s">彩种：{0}</string>
    <string name="bet_order_s">订单号：{0}</string>
    <string name="bet_time_s">投注时间：{0}</string>
    <string name="bet_win_money_s">中奖金额：{0}</string>
    <string name="bet_mobile_s">手机号：{0}</string>
    <string name="bet_play_s">玩法：{0}</string>
    <string name="bet_detail_kidney_s">菜豆：{0}</string>
    <string name="bet_times_s">倍数：{0}</string>
    <string name="bet_kai_status_s">开奖状态：{0}</string>
    <string name="bet_note_s">注数：{0}</string>
    <string name="bet_win_status_s">中奖状态：{0}</string>
    <string name="bet_lottery_num_s">彩票号码：{0}</string>
    <string name="login_s">登录</string>
    <string name="password_s">登录密码：</string>
    <string name="store_uid_s">商家编号：</string>
    <string name="affirm_s">确认</string>
    <string name="affirm_withdraw_s">确认提现{0}菜豆？</string>
    <string name="withdraw_success_s">提现成功</string>
    <string name="withdraw_failed_s">提现失败</string>
    <string name="withdraw_context_s">恭喜您，{0}个菜豆已经提现成功！\n 菜豆已经放入您的{1}，快去兑换菜票吧！</string>
    <string name="withdraw_to_balance_s">提现至余额</string>
    <string name="withdraw_to_card_s">提现至银行卡</string>
    <string name="card_name_s">姓名：</string>
    <string name="card_num_s">卡号：</string>
    <string name="card_bank_s">开户行：</string>
    <string name="binding_bank_s">绑定银行卡</string>
    <string name="binding_affirm_s">确认绑定</string>
    <string name="withdraw_affirm_s">确认提现</string>
    <string name="withdraw_to_bank_s">您想领取{0}个菜豆到银行卡，请确认您的账号信息</string>
    <string name="change_bank_s">更换银行卡</string>
    <string name="ssq_kidney_s">双色球&#160;&#160;&#160;&#160;{0}菜豆</string>
    <string name="dlt_kidney_s">大乐透&#160;&#160;&#160;&#160;{0}菜豆</string>
    <string name="kuai_3_kidney_s">快3&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;{0}菜豆</string>
    <string name="eleven_kidney_s">11选5&#160;&#160;&#160;&#160;&#160;&#160;{0}菜豆</string>
    <string name="soccer_kidney_s">足彩&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;{0}菜豆</string>
    <string name="mobiles_s">手机号：{0}</string>
    <string name="sum_kidney_s">共计：{0}菜豆</string>
    <string name="original_pwd_s">原&#160;&#160;密&#160;&#160;码：</string>
    <string name="new_pwd_s">新&#160;&#160;密&#160;&#160;码：</string>
    <string name="affirm_pwd_s">确认密码：</string>
    <string name="modify_pwd_s">修改密码</string>
    <string name="recharge_kidney_s">{0}菜豆</string>
    <string name="recharge_kidney_hint_s">1元=100菜豆</string>
    <string name="alipay_s">支付宝支付</string>
    <string name="weixin_s">微信支付</string>
    <string name="pay_money_s">您要兑换{0}个菜豆，需要支付{1}元</string>
    <string name="edit_hint_s">请输入菜豆数量</string>
    <string name="bet_day_money_s">当日：投注{0}单&#160;&#160;销售额{1}元&#160;&#160;&#160;&#160;&#160;&#160;当月：投注{2}单&#160;&#160;销售额{3}元</string>
    <string name="app_version">V{0}版</string>

    <string name="protocol_title">Xess&#160;&#160;mini用户服务协议</string>
    <string name="forget_success">密码修改成功，请重新登录</string>
    <string name="forget_pass_null">密码不能为空</string>
    <string name="forget_pass_agen_null">确认密码不能为空</string>
    <string name="forget_pass_input_same">两次输入的密码不一致</string>
    <string name="modify_original_null">原密码不能为空</string>
    <string name="modify_new_null">新密码不能为空</string>
    <string name="modify_affirm_null">确认密码不能为空</string>
    <string name="modify_pass_input_same">两次输入的密码不一致</string>
</resources>
