<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        app:layout_marginTopPercent="10.1%" />

    <TextView
        android:id="@+id/version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="V1.0版"
        app:layout_marginTopPercent="4.6%" />

    <TextView
        android:id="@+id/user_protocol_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version_tv"
        android:layout_centerHorizontal="true"
        android:text="@string/user_protocol"
        app:layout_marginTopPercent="4.6%" />

    <LinearLayout
        android:id="@+id/service_phone_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_protocol_tv"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_marginTopPercent="4.6%">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/service_phone" />

        <TextView
            android:id="@+id/service_phone_et"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="100-100-100" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/version_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/service_phone_ll"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_marginTopPercent="4.6%">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/version_info" />

        <TextView
            android:id="@+id/address_tv"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="已是最新版本" />
    </LinearLayout>

    <Button
        android:id="@+id/exit_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/exit_s"
        app:layout_marginRightPercent="5.2%"
        app:layout_marginBottomPercent="4%" />

    <Button
        android:id="@+id/change_user_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/exit_bt"
        android:layout_toLeftOf="@+id/exit_bt"
        android:layout_toStartOf="@+id/exit_bt"
        android:text="@string/change_user_s"
        app:layout_marginRightPercent="3.6%" />

    <Button
        android:id="@+id/cut_version_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/change_user_bt"
        android:layout_toLeftOf="@+id/change_user_bt"
        android:layout_toStartOf="@+id/change_user_bt"
        android:text="@string/cut_personal_s"
        app:layout_marginRightPercent="3.6%" />


</com.zhy.android.percent.support.PercentRelativeLayout>